<resources>
    <string name="app_name">Sqlite Insert and View</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="insert">Insert</string>
    <string name="show_data">Show Data</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="_8942">⋮</string>
    <string name="id">id</string>
</resources>
