<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/idEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"/>

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/ageEt"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
         />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_gravity="center"/>

</LinearLayout>